update app paraactivar el action

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 
-    <h1>Hello Docker: testing Action 01</h1>
+    <h1>Hello Docker: testing Action 33</h1>
     
     <div>
-        <p>It is currently {{ the_time }}.</p>
+        <p>Ahora son: {{ the_time }}.</p>
+        <p>FLIZ BISIESTOO</p>
         <img src="http://loremflickr.com/600/400/{{tema}}"  width="600" height="400"/>
     </div>
 
